Fixed Button Styles and ParrDetails alignment Files modified - [CreateParr,Lookup,ParrDetails]

--- a/src/main/webapp/pages/ParrDetails/ParrDetails.css
+++ b/src/main/webapp/pages/ParrDetails/ParrDetails.css
@@ -189,7 +189,7 @@ text-align: right
 .summary-col-width-mediumcumm_P_RCVD {
     flex: 0 0 9%;
     max-width: 9%;
-    min-width: 64.333%;;
+    min-width: 54.333%;;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
